--- a/ddm.html
+++ b/ddm.html
@@ -6,7 +6,7 @@
   <!--Add Roboto Font. It's my favorite!!-->
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <!--Add Favicon for the Project-->
-  <link rel="shortcut icon" type="image/x-icon" href="img/about.png">
+  <link rel="shortcut icon" type="image/x-icon" href="img/Indicators.pdf">
   <!--Add/call style sheet(s) to html-->
   <link rel="stylesheet" href="css/main.css" media="all" >
   <link rel="stylesheet" href="css/navbar.css" media="all" >
