--- a/ddm.html
+++ b/ddm.html
@@ -29,7 +29,7 @@
 <!-- <body onload="createViz(0);"> -->
   <div class="tab">
 
-    <button class="tablinks" onclick="openTab(event, 'About')" id="defaultOpen">Home</button>
+    <button class="tablinks" onclick="openTab(event, 'About')" id="defaultOpen">Home </button>
     <button class="tablinks" onclick="openTab(event, 'Cross-Tabulation')">Analysis</button>
     <button class="tablinks" onclick="openTab(event, 'Results')">Results</button>
     <button class="tablinks" onclick="openTab(event, 'Report')">Glossary</button>
@@ -46,7 +46,12 @@
       user’s end. It enabled the evaluation of projects across a range of critical sectors such as infrastructure,
       energy, transportation, logistics, water resource management and sanitization, education, health and so forth.
     </p>
-    <img src="img/test.jpg" alt="DDM" width="100%" height="100%">  
+    <img src="img/test.jpg" alt="DDM" width="100%" height="100%"> 
+      </div>
+
+
+  <div id="Glossary" class="tabcontent">
+    <embed src="img/Indicators.pdf" type="application/pdf"   height="300px" width="100%"> 
   </div>
 
 
