--- a/ddm.html
+++ b/ddm.html
@@ -50,8 +50,8 @@
       </div>
 
 
-  <div id="Glossary" class="tabcontent">
-    <embed src="img/Indicators.pdf" type="application/pdf"   height="300px" width="100%"> 
+  <div id="Report" class="tabcontent">
+    <embed src="img/Indicators.pdf" type="application/pdf"   height="800px" width="100%"> 
   </div>
 
 
