--- a/ddm.html
+++ b/ddm.html
@@ -46,7 +46,7 @@
       user’s end. It enabled the evaluation of projects across a range of critical sectors such as infrastructure,
       energy, transportation, logistics, water resource management and sanitization, education, health and so forth.
     </p>
-    <img src="img/test.jpg" alt="DDM" width="100%" height="100%"> 
+    <img src="img/test1.jpg" alt="DDM" width="100%" height="100%"> 
       </div>
 
 
@@ -89,4 +89,4 @@
   </div>
 </body>
 
-</html>
+</html> 
