--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
   </div>
 </div>
 <div class="section" id="contact">
-  <div class="cc-contact-information" style="background-image: url('images/Best-Places-to-Visit-in-Islamabad.png');">
+  <div class="cc-contact-information" style="background-image: url('images/Best-Places-to-Visit-in-Islamabad.jpg');">
     <div class="container">
       <div class="cc-contact">
         <div class="row">
